--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "@types/date-fns": "^2.6.0",
     "cordova-android": "9.1.0",
+    "date-fns": "^2.27.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
